# qjsonrpc

./: CMakeLists.txt  version.cmi
cmake/: configs.cmi  libConfigs.cmi
libsrc/: CmakeLists.txt
